# rust-projects

./: .gitignore  README.md
actix-web/ActixWebTaskService/: Cargo.toml
actix-web/ActixWebTaskService/src/: main.rs
actix-web/ActixWebTaskService/src/api/: task.rs
actix-web/ActixWebTaskService/src/model/: task.rs
actix-web/initial_actix/: Cargo.toml
actix-web/initial_actix/src/: main.rs
actix-web/initial_actix/src/views/: views.rs
actix-web/web_app/: .env  Cargo.toml
actix-web/web_app/migrations/2023-10-09-211026_web_appDB/: down.sql  up.sql
actix-web/web_app/src/: main.rs  models.rs
actix-web/web_app/templates/: base.html  logout.html
actix/actor/: Cargo.toml
actix/actor/src/: main.rs
actix/test_app/: Cargo.toml
actix/test_app/src/: main.rs
battleship_simulator/: BATTLESHIP SYSTEM STRUCTURE.txt  Cargo.toml  range logic.txt
battleship_simulator/src/: main.rs
initial_project/: Cargo.toml  readme.txt
initial_project/src/: main.rs
nms_algos/: Cargo.toml
nms_algos/src/: main.rs
