[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tera = "1.5.0"  #templating engine
serde = { version = "1", features = ["derive"]} #serialization of structs 
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
dotenv = "0.15.0"